--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.14.1",
     "axios": "^0.26.1",
+    "element-plus": "^2.1.9",
     "vue": "^3.2.31"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "unplugin-auto-import": "^0.7.1",
+    "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.1"
   }
 }
